--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
 
+<title> Juan Carlos Silva </title>
+
+<h1> Hello, Code School!. </h1>
+
+<ul>
+  <li> JavaScript </li>
+  <li> Angular.js </li>
+  <li> Ruby </li>
+
   </body>
 </html>
