--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <title> Juan Carlos Silva </title>
 
-<h1> Hello, Code School!. </h1>
+<h1> 'Hello, Code School!'. </h1>
 
 <ul>
   <li> JavaScript </li>
